tests/baselines/reference/tsxSpreadAttributesResolution5.errors.txt
tests/cases/conformance/jsx/file.tsx(20,10): error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
  Types of property 'y' are incompatible.
    Type 'number' is not assignable to type '2'.
tests/cases/conformance/jsx/file.tsx(33,10): error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: 2;
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    let obj = {
        x: "hello world",
        y: 2
    };
    
    // Error as "obj" has type { x: string; y: number }
    let p = <Poisoned {...obj} />;
             ~~~~~~~~
!!! error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
!!! error TS2322:   Types of property 'y' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type '2'.
    
    class EmptyProp extends React.Component<{}, {}> {
        render() {
            return <div>Default hi</div>;
        }
        greeting: string;
    }
    
    let o = {
        prop1: false
    }
    // Ok
    let e = <EmptyProp {...o} />;
             ~~~~~~~~~
!!! error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode; }'.